Add gui.topbar.menu package